# recipe-graph-rag

./: bbc_good_food_recipes.csv  pyproject.toml  scraper.ipynb  st_app.py
api/schema/: request.py
api/services/: extractor.py
