[project]
name = "knowledge-graph-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.129.2",
    "groq>=0.37.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.22",
    "pyvis>=0.3.2",
    "requests>=2.34.2",
    "streamlit>=1.56.0",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "lib"]

[project.scripts]
kg_engine = "api.main:app"
